# snarkVM

./: Cargo.toml  canarynet-snarkVM.patch
algorithms/: Cargo.toml
algorithms/src/fft/: domain.rs
algorithms/src/msm/variable_base/: batched.rs
algorithms/src/snark/marlin/: marlin.rs
algorithms/src/snark/marlin/ahp/indexer/: circuit.rs
algorithms/src/snark/marlin/ahp/prover/round_functions/: first.rs  mod.rs
algorithms/src/snark/marlin/data_structures/: circuit_proving_key.rs  circuit_verifying_key.rs  proof.rs
circuit/: Cargo.toml
circuit/account/: Cargo.toml
circuit/algorithms/: Cargo.toml
circuit/collections/: Cargo.toml
circuit/environment/: Cargo.toml
circuit/network/: Cargo.toml
circuit/program/: Cargo.toml
circuit/types/: Cargo.toml
circuit/types/address/: Cargo.toml
circuit/types/boolean/: Cargo.toml
circuit/types/field/: Cargo.toml
circuit/types/group/: Cargo.toml
circuit/types/integers/: Cargo.toml
circuit/types/scalar/: Cargo.toml
circuit/types/string/: Cargo.toml
console/: Cargo.toml
console/account/: Cargo.toml
console/algorithms/: Cargo.toml
console/algorithms/src/bhp/hasher/: mod.rs
console/collections/: Cargo.toml
console/network/: Cargo.toml
console/network/environment/: Cargo.toml
console/network/src/: mainnet_v0.rs  testnet3.rs
console/program/: Cargo.toml
console/program/src/data/record/: is_owner.rs
console/types/: Cargo.toml
console/types/address/: Cargo.toml
console/types/boolean/: Cargo.toml
console/types/field/: Cargo.toml
console/types/group/: Cargo.toml
console/types/integers/: Cargo.toml
console/types/scalar/: Cargo.toml
console/types/string/: Cargo.toml
curves/: Cargo.toml
curves/src/templates/: macros.rs
curves/src/templates/bls12/: g2.rs
curves/src/templates/short_weierstrass_jacobian/: affine.rs  projective.rs
fields/: Cargo.toml
fields/src/: fp12_2over3over2.rs  fp2.rs  fp6_3over2.rs  lib.rs  macros.rs
ledger/block/src/transaction/: mod.rs
ledger/query/: Cargo.toml
ledger/query/src/: query.rs
ledger/store/src/helpers/rocksdb/internal/: mod.rs
parameters/: Cargo.toml
parameters/src/: macros.rs
parameters/src/errors/: parameter.rs
parameters/src/mainnet/: mod.rs
parameters/src/mainnet/resources/: block.genesis
parameters/src/testnet/: mod.rs
parameters/src/testnet3/: genesis.rs  mod.rs  powers.rs
r1cs/: Cargo.toml
synthesizer/: Cargo.toml
synthesizer/process/src/: cost.rs  lib.rs  verify_deployment.rs
synthesizer/process/src/resources/: multi_token_standard_program.aleo  pondo_oracle.aleo
synthesizer/process/src/stack/authorization/: mod.rs
synthesizer/process/src/stack/helpers/: initialize.rs
synthesizer/process/src/tests/: arc_38.rs  mod.rs  test_arc_38.rs
synthesizer/process/src/trace/: mod.rs
synthesizer/program/src/resources/: credits.aleo
synthesizer/src/block/transactions/: mod.rs
synthesizer/src/coinbase_puzzle/: mod.rs
synthesizer/src/process/: authorize.rs  execute.rs  mod.rs
synthesizer/src/process/stack/: authorize.rs  execute.rs
synthesizer/src/process/stack/inclusion/: execute.rs  mod.rs
synthesizer/src/vm/: execute.rs
utilities/: Cargo.toml
utilities/derives/: Cargo.toml
utilities/src/: parallel.rs
utilities/src/serialize/: impls.rs  traits.rs
vm/package/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
