[package]
name = "snarkvm-circuit-algorithms"
version = "0.9.12"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Algorithm circuit library for a decentralized virtual machine"
license = "GPL-3.0"
edition = "2021"

[dependencies.console]
package = "snarkvm-console-algorithms"
path = "../../console/algorithms"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-types]
path = "../types"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-fields]
path = "../../fields"
version = "0.9.12"
default-features = false

[dev-dependencies.snarkvm-curves]
path = "../../curves"
default-features = false

[dev-dependencies.snarkvm-utilities]
path = "../../utilities"
features = [ "parallel" ]

[dev-dependencies.anyhow]
version = "1.0.69"

[features]
default = [ "parallel" ]
parallel = [
  "console/parallel",
  "snarkvm-circuit-types/parallel",
  "snarkvm-fields/parallel"
]
