[package]
name = "snarkvm-circuit-collections"
version = "0.9.12"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Collections circuit library for a decentralized virtual machine"
license = "GPL-3.0"
edition = "2021"

[dependencies.console]
package = "snarkvm-console-collections"
path = "../../console/collections"
version = "0.9.12"
optional = true
default-features = false

[dependencies.snarkvm-circuit-algorithms]
path = "../algorithms"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-types]
path = "../types"
version = "0.9.12"
default-features = false

[dev-dependencies.snarkvm-circuit-network]
path = "../network"

[dev-dependencies.snarkvm-console-algorithms]
path = "../../console/algorithms"

[dev-dependencies.snarkvm-console-network]
path = "../../console/network"

[dev-dependencies.snarkvm-utilities]
path = "../../utilities"
features = [ "parallel" ]

[dev-dependencies.anyhow]
version = "1.0.69"

[features]
default = [ "parallel" ]
parallel = [
  "console/parallel",
  "snarkvm-circuit-algorithms/parallel",
  "snarkvm-circuit-types/parallel"
]
