[package]
name = "snarkvm-circuit-network"
version = "0.9.12"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Network circuit library for a decentralized virtual machine"
license = "GPL-3.0"
edition = "2021"

[dependencies.console]
package = "snarkvm-console-network"
path = "../../console/network"
version = "0.9.12"
optional = true
default-features = false

[dependencies.snarkvm-circuit-algorithms]
path = "../algorithms"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-collections]
path = "../collections"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-types]
path = "../types"
version = "0.9.12"
default-features = false

[dev-dependencies.snarkvm-console-types]
path = "../../console/types"

[features]
default = [ "parallel" ]
parallel = [
  "console/parallel",
  "snarkvm-circuit-algorithms/parallel",
  "snarkvm-circuit-collections/parallel",
  "snarkvm-circuit-types/parallel"
]
