[package]
name = "snarkvm-circuit-types-boolean"
version = "0.9.12"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Boolean circuit for a decentralized virtual machine"
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "and"
path = "benches/and.rs"
harness = false

[dependencies.console]
package = "snarkvm-console-types-boolean"
path = "../../../console/types/boolean"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-environment]
path = "../../environment"
version = "0.9.12"
default-features = false

[dev-dependencies.criterion]
version = "0.4"

[features]
default = [ "parallel" ]
parallel = [ "console/parallel", "snarkvm-circuit-environment/parallel" ]
