[package]
name = "snarkvm-circuit-types-scalar"
version = "0.9.12"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Scalar circuit for a decentralized virtual machine"
license = "GPL-3.0"
edition = "2021"

[dependencies.console]
package = "snarkvm-console-types-scalar"
path = "../../../console/types/scalar"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-environment]
path = "../../environment"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-types-boolean]
path = "../boolean"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-types-field]
path = "../field"
version = "0.9.12"
default-features = false

[features]
default = [ "parallel" ]
parallel = [
  "console/parallel",
  "snarkvm-circuit-environment/parallel",
  "snarkvm-circuit-types-boolean/parallel",
  "snarkvm-circuit-types-field/parallel"
]
