[package]
name = "snarkvm-circuit-types-string"
version = "0.9.12"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "String circuit for a decentralized virtual machine"
license = "GPL-3.0"
edition = "2021"

[dependencies.console]
package = "snarkvm-console-types-string"
path = "../../../console/types/string"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-environment]
path = "../../environment"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-types-boolean]
path = "../boolean"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-types-field]
path = "../field"
version = "0.9.12"
default-features = false

[dependencies.snarkvm-circuit-types-integers]
path = "../integers"
version = "0.9.12"
default-features = false

[dev-dependencies.snarkvm-utilities]
path = "../../../utilities"
default-features = false
features = [ "parallel" ]

[dev-dependencies.rand]
version = "0.8"

[features]
default = [ "parallel" ]
parallel = [
  "console/parallel",
  "snarkvm-circuit-environment/parallel",
  "snarkvm-circuit-types-boolean/parallel",
  "snarkvm-circuit-types-field/parallel",
  "snarkvm-circuit-types-integers/parallel"
]
